# hardware-buddies

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  REFERENCE.md  platformio.ini  pyproject.toml
.github/workflows/: ci.yml
ahakey/assets/: README.md
ahakey/docs/: architecture.md  installation.md  releases.md  repo-layout.md  roadmap.md  status.md  supported-platforms.md
ahakey/releases/: README.md
ahakey/scripts/: README.md
cardputer-adv-buddy/: HANDOFF.md  PROJECT_STATUS.md  README.md  partitions_clawd_8mb.csv  platformio.ini
cardputer-adv-buddy/openspec/: config.yaml
cardputer-adv-buddy/src/: agent_state.h  ble_link.cpp  ble_link.h  cclink.cpp  cclink.h  clawd_player.cpp  clawd_player.h  link_state.h  main.cpp  mood.cpp  mood.h  motion.cpp  motion.h  sound_player.cpp  sound_player.h  state_source.h
cardputer-adv-buddy/tools/: ble_test_prompt.py
characters/clawd/: manifest.json
claude-code-buddy/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  REFERENCE.md  partitions_tab5_16MB.csv  platformio.ini  wifi_secrets.ini
claude-code-buddy/desktop-app/: main.js
claude-code-buddy/docs/: agent-fleet-project.md  agora-voice-agent-explore.md  (+6 more)
desktop-app/: capture.js  package.json
docs/: agent-fleet-project.md  agora-stackchan-voice-bringup.md  bugc2.md  character-packs.md  development.md  onboarding-next-stick.md  stackchan-monitor-preview.html  states.md  sticks3-xiaozhi-bringup.md  tab5-buddy-dev.md  tab5-fun-ideas.md  tab5-i2c-conflict.html
m5-paper-buddy/: README.en.md  README.md
mac-helper/: Package.swift
src/: adpcm.cpp  audio_ble.cpp  audio_capture.cpp  audio_capture.h  ble_bridge.cpp  buddy.cpp  buddy.h  bugc2.cpp  bugc2.h  character.cpp  data.h  m5_compat.h  main.cpp  xfer.h
tab5-agentfarm-buddy/: .gitignore  README.md  platformio.ini
tests/: conftest.py  test_audio_relay.py  test_buddy_core.py  test_cc_bridge.py  test_cmux_control.py  test_frame_deframer.py  test_frame_server.py  test_hand_gesture.py  test_route_stager.py  test_stage_route.py
tools/: make_vlw.py  motor-calib.html  prep_character.py  sticks3_mic_probe.py  sticks3_voice.py
(+301 files in other folders)
