[project]
name = "claude-desktop-buddy-tools"
version = "0.0.0"
description = "Bridge daemons + tooling for the claude-desktop-buddy firmware"
requires-python = ">=3.10"
# Runtime deps the daemons need. bleak is pure-Python and imports without
# hardware; pyobjc-Quartz is macOS-only (the PTT key relay) and gated so
# Linux CI can still install the dev set.
dependencies = [
    "bleak",
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]
# Optional gesture-recognition stack for the StackChan camera path.
# Heavy — mediapipe alone is ~50MB. Not pulled by default so cc-bridge
# stays light for users without a StackChan or who don't want gestures.
# Install into the daemon venv:
#   ~/.cc-bridge/venv/bin/pip install -e ".[vision]"
# Then restart cc-bridge. If unavailable, gesture-approve degrades to
# manual approval — nothing breaks. See openspec change
# 2026-05-15-0003-stackchan-camera-gestures.
vision = [
    "mediapipe>=0.10",
    "pillow>=10",
    "numpy>=1.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Not a distributable package — just dependency + test config. Stop
# setuptools from auto-discovering src/ and tools/ as packages.
[tool.setuptools]
py-modules = []
